+ fix reload lag after ticket created + add modify ticket option in Backend + change login buttons and link + add device available check

--- a/todo.txt
+++ b/todo.txt
@@ -28,6 +28,8 @@ Die Todo-Liste mit Prioritäten:
 
 ------ current implementaton --------
 
++ TimeTicket Handling
+
 + Code Cleanup
 
 + Standortmanagement
